--- a/ud4/anillosDePoder/src/app/anillo/detalle/detalle.html
+++ b/ud4/anillosDePoder/src/app/anillo/detalle/detalle.html
@@ -2,7 +2,7 @@
      <div class="acciones">
     <table>
         <tr>
-            <td><button id="buscarAnillo">Buscar Anillo</button></td>
+            <td><button routerLink="/buscar" id="buscarAnillo">Buscar Anillo</button></td>
             <td><button id="crearAnillo">Crear Anillo</button></td>
         </tr>
     </table>
