--- a/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
+++ b/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
@@ -8,3 +8,35 @@
     </table>
     </div>
     </div>
+
+    <div class="busqueda">
+       <input type="text" pInputText [(ngModel)]="campoBusqueda" />
+       <p-button label="Buscar Anillo" icon="pi pi-check"  (onClick)="buscar()" severity="contrast" />
+    </div>
+
+    <div>
+        <table class="tabla">
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Portador</th>
+                    <th>Raza</th>
+                    <th>Poder</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let anillo of anillosFiltrados">
+                        <td>{{ anillo.nombre }}</td>
+                        <td>{{ anillo.portador }}</td>
+                        <td>{{ anillo.raza }}</td>
+                        <td>{{ anillo.poder }}</td>
+                </tr>
+                <tr *ngIf="anillosFiltrados.length === 0">
+                     <td colspan="5">No se encontraron anillos</td>
+                 </tr>
+            </tbody>
+
+
+        </table>
+
+    </div>
