--- a/ud4/anillosDePoder/src/styles.css
+++ b/ud4/anillosDePoder/src/styles.css
@@ -63,5 +63,35 @@
   justify-content: center;    
   align-items: center;  
   color: #000;
-        
+
+}
+.busqueda {
+    padding-top: 10px;   
+    display: flex;
+   justify-content: center;    
+   align-items: center;  
+   color: #000;
+}
+
+.busqueda button {
+    margin-left: 10px;
+}
+
+.tabla {
+    border: rgb(255, 234, 0) 2px solid;
+    border-radius: 5px;
+    background-color: bisque;
+    align-items: center;
+    color:#000;
+    margin-left: 30%;
+    margin-right: 30%;
+    padding: 20px ;
+    margin-top: 20px;
+}
+
+tbody {
+  border: blue 5px solid;
+}
+tr {
+  border: green 5px solid;
 }
