--- a/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
+++ b/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
@@ -11,7 +11,7 @@
 
     <div class="busqueda">
        <input type="text" pInputText [(ngModel)]="campoBusqueda" />
-       <p-button label="Buscar Anillo" icon="pi pi-check"  (onClick)="buscar()" severity="contrast" />
+       <p-button label="Buscar Anillo" icon="pi pi-check"  (onClick)="buscar()" severity="danger" />
     </div>
 
     <div>
@@ -25,15 +25,18 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let anillo of anillosFiltrados">
+                @for (anillo of anillosFiltrados; track anillo.nombre) {
+                    <tr>
                         <td>{{ anillo.nombre }}</td>
                         <td>{{ anillo.portador }}</td>
                         <td>{{ anillo.raza }}</td>
                         <td>{{ anillo.poder }}</td>
-                </tr>
-                <tr *ngIf="anillosFiltrados.length === 0">
-                     <td colspan="5">No se encontraron anillos</td>
-                 </tr>
+                    </tr>
+                } @empty {
+                    <tr>
+                        <td colspan="4">No se encontraron anillos</td>
+                    </tr>
+                }
             </tbody>
 
 
