--- a/ud4/anillosDePoder/src/app/app.html
+++ b/ud4/anillosDePoder/src/app/app.html
@@ -8,7 +8,7 @@
     </p>
 
     <div class="acciones">
-      <button>Explorar Razas</button>
+      <button routerLink="/detalleRaza">Explorar Razas</button>
       <button routerLink="/detalle">Ver Anillos</button>
     </div>
   </div>
