--- a/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
+++ b/ud4/anillosDePoder/src/app/anillo/busqueda/busqueda.html
@@ -3,7 +3,7 @@
     <table>
         <tr>
             <td><button id="buscarAnillo">Buscar Anillo</button></td>
-            <td><button id="crearAnillo">Crear Anillo</button></td>
+            <td><button routerLink="/detalle" id="crearAnillo">Crear Anillo</button></td>
         </tr>
     </table>
     </div>
