--- a/ud4/anillosDePoder/src/app/app.html
+++ b/ud4/anillosDePoder/src/app/app.html
@@ -10,9 +10,14 @@
     <div class="acciones">
       <button routerLink="/detalleRaza">Explorar Razas</button>
       <button routerLink="/detalle">Ver Anillos</button>
+      <button routerLink="/personajes">Personajes</button>
     </div>
   </div>
 </header>
-
+<!--@for (item of paises; track item.name.common) {
+<li>{{ item.name.common }}</li>
+} @empty {
+<li>There are no items.</li>
+}-->
 
 <router-outlet />
