--- a/ud4/anillosDePoder/src/app/personajes/buscar-personaje/buscar-personaje.html
+++ b/ud4/anillosDePoder/src/app/personajes/buscar-personaje/buscar-personaje.html
@@ -1,6 +1,33 @@
+<div class="tablaPersonajes">
+<table>
+    <tr>
+        <th>
+            Nombre
+        </th>
+        <th>
+            Raza
+        </th>
+        <th>
+            Fecha Nacimiento
+        </th>
+        <th>
+            Acciones
+        </th>
+    </tr>
+    
 
 @for (item of personajes; track item.id) {
-<li>{{ item.nombre }}</li>
+    <tr>
+    <td>{{item.nombre}}</td>
+    <td>{{item.raza}}</td>
+    <td>{{item.fechaNacimiento}}</td>
+    <td><input type ="button" id="btnEditar" (click)="editar(item.id)"  value ="Editar"></td>
+    
+    
+    </tr>
 } @empty {
 <li>no hay</li>
 }
+
+</table>
+</div>
