--- a/ud4/anillosDePoder/src/app/personajes/buscar-personaje/buscar-personaje.html
+++ b/ud4/anillosDePoder/src/app/personajes/buscar-personaje/buscar-personaje.html
@@ -1,4 +1,12 @@
+
+
 <div class="tablaPersonajes">
+ <div class="card flex justify-center">
+            <button pButton (click)="crearPersonaje()">
+                <i class="pi pi-check" pButtonIcon></i>
+                <span pButtonLabel>Crear Personaje</span>
+            </button>
+        </div>
 <table>
     <tr>
         <th>
@@ -13,6 +21,7 @@
         <th>
             Acciones
         </th>
+        
     </tr>
     
 
@@ -22,12 +31,14 @@
     <td>{{item.raza}}</td>
     <td>{{item.fechaNacimiento}}</td>
     <td><input type ="button" id="btnEditar" (click)="editar(item.id)"  value ="Editar"></td>
+  
     
     
     </tr>
 } @empty {
 <li>no hay</li>
 }
+
 
 </table>
 </div>
